# secrets-hunter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker.yml  pypi.yml  tests.yml  unit-tests.yml
docs/: CONTENTS.md  config.md  detection-process.md  installation.md  scan-modes.md  usage.md
secrets_hunter/: __init__.py  cli.py  scanner.py
secrets_hunter/config/: __init__.py  ignore.toml  loader.py  patterns.py  patterns.toml  settings.py
secrets_hunter/detectors/: base.py  entropy_detector.py  pattern_detector.py
secrets_hunter/detectors/utils/: __init__.py  entropy.py  strings_extractor.py  validators.py
secrets_hunter/handlers/: file_handler.py  findings_processor.py  output_formater.py  progress.py  strings_extractor.py
secrets_hunter/models/: __init__.py  finding.py
secrets_hunter/reporters/: console_base.py  console_reporter.py  json_reporter.py  runtime_cfg_reporter.py  sarif_reporter.py
secrets_hunter/utils/: validators.py
secrets_hunter/validators/: __init__.py  cli_args.py  false_positive_findings.py
src/secrets_hunter/: __init__.py  _version.py  cli.py  scanner.py
src/secrets_hunter/config/: __init__.py  domain_paths.py  ignore.toml  loader.py  patterns.toml  settings.py
src/secrets_hunter/detection/: engine.py  false_positive_validator.py
src/secrets_hunter/detectors/: entropy_detector.py  pattern_detector.py
src/secrets_hunter/filters/: __init__.py  path_filter.py
src/secrets_hunter/handlers/: __init__.py  findings_processor.py  line_fragmenter.py  lines_reader.py  progress_bar.py  strings_extractor.py
src/secrets_hunter/models/: __init__.py  config.py  finding.py  line_fragment.py  scan_work_item.py  string_classification.py
src/secrets_hunter/reporters/: __init__.py  console_reporter.py  findings_output_processor.py  json_reporter.py  runtime_cfg_reporter.py  sarif_reporter.py
src/secrets_hunter/scan_modes/: __init__.py
src/secrets_hunter/semantics/: __init__.py  bigrams.py  semantics.py
src/secrets_hunter/validators/: __init__.py  cli_args.py  false_positive_findings.py  file_validator.py  text_content_validator.py
tests/func/: mid_secrets.txt  rejected_secrets.txt  secrets  secrets.txt  test_e2e.py  vulnerabilities.txt  zero_secrets.txt
tests/unit/: test_cli_parse.py  test_config_overlays.py  test_domain_client.py  test_domain_scanner.py  test_filesystem_scanner.py  test_git_history_handler.py  test_git_history_reader.py  test_git_history_scanner.py  test_reporters.py  test_scanner_routing.py
(+26 files in other folders)
