[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secrets-hunter"
version = "0.0.1"
description = "Detect secrets and sensitive information in your codebase"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "FVLCN-dev"}
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=3",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
secrets-hunter = "secrets_hunter.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["secrets_hunter*"]
exclude = ["tests*"]
