[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secrets-hunter"
version = "0.3.0"
description = "Detect secrets and sensitive information in your codebase"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["security", "secrets", "scanner", "git", "ci"]
authors = [
    { name = "FVLCN-dev", "email" = "alex@fvlcn.dev"}
]

[project.urls]
Repository = "https://github.com/FVLCN/secrets-hunter"
Homepage = "https://fvlcn.dev"

[project.scripts]
secrets-hunter = "secrets_hunter.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["secrets_hunter*"]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
secrets_hunter = ["config/*.toml"]
